# pocket

./: README  README.md  pocket-intro.rus.md
archlinux/: PKGBUILD
debian/: changelog  control  control.buster  control.jessie  copyright  pocket.conffiles  pocket.dirs  rules
pocket/: AUTHORS  ChangeLog  Makefile.am  README  TODO  configure.ac  debian.pocket  debian.repo  local.env  pocket  pocket-build  pocket-functions.sh  pocket-init  pocket-init.1.md  pocket.1.md  pocket.conf
pocket/completion/: pocket  pocket-init
